# student_ai_backend

./: .gitignore  Dockerfile  main.py  package-lock.json  pyproject.toml  requirements.txt  train.py
app/: db.py  main.py  models_pydantic.py  predict.py
artifacts/: meta.json  model.joblib
